--- a/.github/workflows/act-docker-test.yml
+++ b/.github/workflows/act-docker-test.yml
@@ -14,4 +14,4 @@ jobs:
       - name: Build the Docker image
 #      - run: docker build . --file Dockerfile --tag my-image-name:$(date +%s)
 #      - run: docker build -t ghcr.io/go-docker-firsttry:$(date +%s) .
-      - run: docker build -t ghcr.io/go-docker-firsttry:latest .
+        run: docker build -t ghcr.io/go-docker-firsttry:latest .
