--- a/.github/workflows/act-docker-test.yml
+++ b/.github/workflows/act-docker-test.yml
@@ -11,7 +11,10 @@ jobs:
 
     steps:
       - uses: actions/checkout@v3
-      - name: Build the Docker image
+      - name: build image
 #      - run: docker build . --file Dockerfile --tag my-image-name:$(date +%s)
 #      - run: docker build -t ghcr.io/go-docker-firsttry:$(date +%s) .
         run: docker build -t ghcr.io/go-docker-firsttry:latest .
+
+      - name: push image
+        run: docker push ghcr.io/go-docker-firsttry:latest .
