--- a/.github/workflows/act-docker-test.yml
+++ b/.github/workflows/act-docker-test.yml
@@ -5,16 +5,31 @@ on:
     branches: [ "master" ]
 
 
+env:
+  REGISTRY: ghcr.io
+  IMAGE_NAME: ${{ github.repository }}
+
 jobs:
   build:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v3
-      - name: build image
-#      - run: docker build . --file Dockerfile --tag my-image-name:$(date +%s)
-#      - run: docker build -t ghcr.io/go-docker-firsttry:$(date +%s) .
-        run: docker build -t ghcr.io/go-docker-firsttry:latest .
+      - name: checkout repository
+        uses: actions/checkout@v3
+      #      - run: docker build . --file Dockerfile --tag my-image-name:$(date +%s)
+      #      - run: docker build -t ghcr.io/go-docker-firsttry:$(date +%s) .
 
-      - name: push image
-        run: docker push ghcr.io/go-docker-firsttry:latest
+      - name: log to the registry
+        uses: docker/login-action@v2
+        with:
+          registry: ${{ env.REGISTRY }}
+          username: ${{ github.actor }}
+          password: ${{ secrets.TEST_ACTIONS }}
+
+      - name: build and push
+        uses: docker/build-push-action@v3
+        with:
+          context: .
+          push: true
+
+
