--- a/.github/workflows/act-docker-test.yml
+++ b/.github/workflows/act-docker-test.yml
@@ -19,17 +19,25 @@ jobs:
       #      - run: docker build . --file Dockerfile --tag my-image-name:$(date +%s)
       #      - run: docker build -t ghcr.io/go-docker-firsttry:$(date +%s) .
 
-      - name: log to the registry
-        uses: docker/login-action@v2
+      #      - name: log to the registry
+      #        uses: docker/login-action@v2
+      #        with:
+      #          registry: ${{ env.REGISTRY }}
+      #          username: ${{ github.actor }}
+      #          password: ${{ secrets.TEST_ACTIONS }}
+
+      - name: Extract metadata (tags, labels) for Docker
+        id: meta
+        uses: docker/metadata-action@98669ae865ea3cffbcbaa878cf57c20bbf1c6c38
         with:
-          registry: ${{ env.REGISTRY }}
-          username: ${{ github.actor }}
-          password: ${{ secrets.TEST_ACTIONS }}
+          images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
 
       - name: build and push
         uses: docker/build-push-action@v3
         with:
           context: .
           push: true
+          tags: ${{ steps.meta.outputs.tags }}
+          labels: ${{ steps.meta.outputs.labels }}
 
 
