--- a/.github/workflows/act-docker-test.yml
+++ b/.github/workflows/act-docker-test.yml
@@ -7,7 +7,7 @@ on:
 
 env:
   REGISTRY: ghcr.io
-  IMAGE_NAME: ${{ github.repository:$(date +%s) }}
+  IMAGE_NAME: ${{ github.repository }}:$(date +%s)
 
 jobs:
   build:
