--- a/.github/workflows/act-docker-test.yml
+++ b/.github/workflows/act-docker-test.yml
@@ -48,7 +48,7 @@ jobs:
 
     steps:
       - name: checkout repository
-      - uses: actions/checkout@v3
+        uses: actions/checkout@v3
 
       - name: log to the registry
         uses: docker/login-action@v2
