--- a/.github/workflows/act-docker-test.yml
+++ b/.github/workflows/act-docker-test.yml
@@ -8,40 +8,6 @@ env:
   REGISTRY: ghcr.io
   IMAGE_NAME: ${{ github.repository }}
 
-#jobs:
-#  build:
-#    runs-on: ubuntu-latest
-#
-#    steps:
-#      - name: checkout repository
-#        uses: actions/checkout@v3
-#      #      - run: docker build . --file Dockerfile --tag my-image-name:$(date +%s)
-#      #      - run: docker build -t ghcr.io/go-docker-firsttry:$(date +%s) .
-#
-#      - name: log to the registry
-#        uses: docker/login-action@v2
-#        with:
-#          registry: ${{ env.REGISTRY }}
-#          username: ${{ github.actor }}
-#          password: ${{ secrets.CR_PAT }}
-#
-#      - name: Extract metadata (tags, labels) for Docker
-#        id: meta
-#        uses: docker/metadata-action@98669ae865ea3cffbcbaa878cf57c20bbf1c6c38
-#        with:
-#          images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
-#
-#      - name: build and push
-#        uses: docker/build-push-action@v3
-#        with:
-#          context: .
-#          push: true
-#          tags: ${{ steps.meta.outputs.tags }}
-#          labels: ${{ steps.meta.outputs.labels }}
-##          test it and add token to environment
-##          secrets: |
-##            "github_token=${{ secrets.CR_PAT }}"
-
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -57,8 +23,19 @@ jobs:
           username: ${{ github.actor }}
           password: ${{ secrets.CR_PAT }}
 
-      - name: build image
-        run: docker build -t ghcr.io/go-docker-firsttry:latest .
+      - name: Extract metadata (tags, labels) for Docker
+        id: meta
+        uses: docker/metadata-action@v3
+        with:
+          images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
 
-      - name: push image
-        run: docker push ghcr.io/go-docker-firsttry:latest
+      - name: build and push
+        uses: docker/build-push-action@v3
+        with:
+          context: .
+          push: true
+          tags: ${{ steps.meta.outputs.tags }}
+          labels: ${{ steps.meta.outputs.labels }}
+#          test it and add token to environment
+#          secrets: |
+#            "github_token=${{ secrets.CR_PAT }}"
