--- a/.github/workflows/act-docker-test.yml
+++ b/.github/workflows/act-docker-test.yml
@@ -34,7 +34,7 @@ jobs:
         with:
           context: .
           push: true
-          tags: go-docker-firsttry:$(date +%s)
+          tags: $(date +%s)
           labels: ${{ steps.meta.outputs.labels }}
 #          test it and add token to environment
 #          secrets: |
